--- a/README
+++ b/README
@@ -16,4 +16,6 @@ script to do this is configure-ec2.sh . It takes as parameters:
 This is only tested with the Ubuntu 11.10 image from
 http://alestic.com/ .
 
+This idea originates from http://opinionated-programmer.com/2011/06/chef-solo-tutorial-managing-a-single-server-with-chef/
+
 The application is located in cookbooks/webapp/files/default .
